# AIAgents

./: README.md
crewAI/news_reporting/: .env_example  README.md  pyproject.toml
crewAI/news_reporting/src/news_reporting/: crew.py  main.py
crewAI/news_reporting/src/news_reporting/config/: agents.yaml  tasks.yaml
crewAI/news_reporting/src/news_reporting/outputs/: report.md
crewAI/news_reporting/src/news_reporting/tools/: news_parser_tool.py
crewAI/podcast_creator/: .env_example  .gitignore  pyproject.toml
crewAI/podcast_creator/news/: news_result.txt
crewAI/podcast_creator/src/podcast_creator/: main.py  streamlit_app.py
crewAI/podcast_creator/src/podcast_creator/tools/: news_parser_tool.py  text_to_speech_tool.py
crewAI/podcast_creator_from_rss_feed_openai_api/: .gitignore  README.md
crewAI/podcast_creator_from_rss_feed_openai_api/news/: news_result.txt
crewAI/podcast_creator_from_rss_feed_openai_api/src/podcast_creator_from_rss_feed_openai_api/: main.py  streamlit_app.py
crewAI/podcast_creator_from_rss_feed_openai_api/src/podcast_creator_from_rss_feed_openai_api/tools/: text_to_speech_tool_elevenlabs.py
crewAI/podcast_creator_from_url_ollama_coquiTTS/: .env_example  README.md  pyproject.toml
crewAI/podcast_creator_from_url_ollama_coquiTTS/output/: scraped_news.txt
crewAI/podcast_creator_from_url_ollama_coquiTTS/src/podcast_creator_from_url_ollama_coquiTTS/: main.py  streamlit_app.py
crewAI/podcast_creator_from_url_ollama_coquiTTS/src/podcast_creator_from_url_ollama_coquiTTS/tools/: text_to_speech_tool.py
crewAI/quiz_maker/: .env_example  README.md  pyproject.toml
crewAI/quiz_maker/output/: original_content.txt
crewAI/quiz_maker/output/divided_topics/: topic_1.txt  topic_2.txt  topic_3.txt  topic_4.txt
crewAI/quiz_maker/output/questions/: questions_topic_1.json  questions_topic_2.json  questions_topic_3.json  questions_topic_4.json
crewAI/quiz_maker/src/quiz_maker/: crew.py  main.py
crewAI/quiz_maker/src/quiz_maker/config/: agents.yaml  tasks.yaml
crewAI/quiz_maker/src/quiz_maker/tools/: divide_topics_into_txt.py  txt_to_questions.py
openAIAgents/quiz_maker/: README.md  ai_agent.py  excel_converter.py  main.py  models.py  requirements.txt  utils.py
openAIAgents/quiz_maker/json_question_answers/: diabete-mellito-di-tipo-2_quiz.json  www.humanitas_quiz.json
openAIAgents/quiz_maker/raw_text/: diabete-mellito-di-tipo-2.txt  www.humanitas.txt
openAIAgents/quiz_maker/summarized_pdf_text/: www.humanitas_summary.txt
openAIAgents/quiz_maker/summarized_text/: diabete-mellito-di-tipo-2_summary.txt
phidata/podcast_creator_from_url_ollama_coquiTTS/: .env_example  README.md  main.py  models.py  news_rewriter.py  podcast_audio_generator.py  requirements.txt
phidata/podcast_creator_from_url_ollama_coquiTTS/agents/: news_scraper.py  podcast_audio_generator.py  podcast_writer.py
phidata/podcast_creator_from_url_ollama_coquiTTS/outputs/: news.txt
