[project]
name = "news_reporting"
version = "0.1.0"
description = "news_reporting using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "feedparser"
]

[project.scripts]
news_reporting = "news_reporting.main:run"
run_crew = "news_reporting.main:run"
train = "news_reporting.main:train"
replay = "news_reporting.main:replay"
test = "news_reporting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
