[project]
name = "podcast_creator_from_rss_feed_openai_api"
version = "0.1.0"
description = "podcast_creator_from_rss_feed_openai_api using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "feedparser"
]

[project.scripts]
podcast_creator_from_rss_feed_openai_api = "podcast_creator_from_rss_feed_openai_api.main:run"
run_crew = "podcast_creator_from_rss_feed_openai_api.main:run"
train = "podcast_creator_from_rss_feed_openai_api.main:train"
replay = "podcast_creator_from_rss_feed_openai_api.main:replay"
test = "podcast_creator_from_rss_feed_openai_api.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
